--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    font-size : 16px;
+    font-size : 22px;
 
 }
 
@@ -16,7 +16,7 @@ body {
 }
 
 .finalCorrValue {
-    font-size : 20px;
+    font-size : 1.2rem;
     font-weight : bold;
     color : pink;
     display : inline-block;
@@ -27,14 +27,19 @@ body {
 
 .altInputContainer {
     display : block;
-    height : 1.2rem;
+    height : 2rem;
     margin-top : 0.8rem; 
 }
 
 .finalCorrSolveValue {
-    font-size : 10px;
+    font-size : 0.7rem;
     color : #888;
     margin-top : 0.5rem;
+}
+
+.inputData {
+    height : 2rem;
+    width : 9rem;
 }
 
 .inputAlt {
